# fortunes-algorithm-cmake

./: CMakeLists.txt
include/: mathutil.hpp  voronoi.hpp
src/: main.cpp
